# STM32H7-rust-template

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: launch.json
src/: lib.rs  main.rs  utils.rs
tests/: integration.rs  rx-tx-test.rs
