[package]
# TODO: If you did not use cargo generate -> insert your name (authors) and the project-name

authors = ["{{authors}}"]
name = "{{project-name}}"
edition = "2021"
version = "0.1.0"


# needed for each integration test
[[test]]
name = "integration"
harness = false


[[test]]
name = "rx-tx-test"
harness = false

# The following two settings a requiered, so you can simply use cargo test to run all tests
[lib]
test = false

[[bin]]
name = "{{crate_name}}"
path = "src/main.rs"
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h753v", "rt", "defmt"] }
embedded-hal = "1.0.0"
# Use nb if you want to use the libary for logging out on Tx"
# nb = "1.1.0"
# STM32h7xx hal only implements the InputPin of the 0.2 embedded-hal -> therefore we also need this old version
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }

[dev-dependencies]
defmt-test = "0.4.0"
nb = "1.1.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
